--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 # *.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+#.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
@@ -220,4 +220,6 @@ TSWLatexianTemp*
 
 # expex forward references with \gathertags
 *-tags.tex
+#.idea/workspace.xml
 .idea
+out/*/**
